# penguine_c

./: .clang-format  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  vcpkg.json
penguine/: CMakeLists.txt  penguine.h
penguine/game/: sprite_render.h
penguine/render/: render.c  render.h
penguine/update/physics/: collision.c  collision.h
penguine/utilities/: file.c  file.h  mathematics.c  mathematics.h  memory.h
penguine/window/: window.c  window.h
res/: shader.frag  shader.vert
src/: main.c
src/render/: gl.c  gl.h  render.c  render.h
src/utilities/: mathematics.c  mathematics.h
src/window/: window.c  window.h
